# meso-cosmos-agent

./: .gitignore  README.md  README.zh.md  meso.bat  meso_cli.py  pyproject.toml
.github/workflows/: ci.yml
config/: coordination.yaml  observable_metrics.yaml  tao.yaml  version_manifest.yaml  wuxing.yaml
scripts/: run_all_tests.py
src/: __init__.py  __main__.py  main.py
src/bdi/: __init__.py
src/meso_cosmos_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/monitor/: __init__.py  eval_agent.py  evolution_executor.py  health_check.py  validator.py  wuxing_monitor.py
src/pipeline/: __init__.py  chaos_engine.py  orchestrator.py  search_optimizer.py
src/router/: __init__.py
